force-app/main/default/objects/SDG_Goal_Target__c/SDG_Goal_Target__c.object-meta.xml
<CustomObject>
    <description>Sustainable Development Goal Targets</description>
    <label>Goal Target</label>
    <nameField>
        <displayFormat>SDG-T-{00000}</displayFormat>
        <label>Goal Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>