force-app/main/default/objects/SDG_Goal_Target__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the target</description>
    <inlineHelpText>Provide details about what the target aims to achieve.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>