force-app/main/default/objects/SDG_Goal_Target__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>Parent SDG Goal</description>
    <inlineHelpText>Select the parent Sustainable Development Goal.</inlineHelpText>
    <label>Goal</label>
    <referenceTo>SDG_Goal__c</referenceTo>
    <relationshipLabel>Goal Targets</relationshipLabel>
    <relationshipName>Goal_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>