force-app/main/default/objects/SDG_Goal_Target__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The official title of the SDG target</description>
    <inlineHelpText>Enter the full title of the target.</inlineHelpText>
    <label>Title</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>